--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Download my Resume in PDF!</h2>
-                <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
+                <a href="/img/warrenphen-resume.pdf">Download Now!</a>
             </div>
         </div>
     </aside>
