added descriptions for portfolio items

--- a/index.html
+++ b/index.html
@@ -141,11 +141,11 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    An Online Interative School built with Ruby on Rails.
+                                    An Online Interative School - Final Project, username: me@me.com
+                                    password: password
                                 </div>
                                 <div class="project-name">
-                                    username: me@me.com
-                                    password: password
+                                    Ruby on Rails
                                 </div>
                             </div>
                         </div>
@@ -157,10 +157,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Chat App
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Meteor/Node.js
                                 </div>
                             </div>
                         </div>
@@ -172,10 +172,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Amazon style website exercise
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Ruby on Rails
                                 </div>
                             </div>
                         </div>
@@ -187,10 +187,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    E-commerce for selling vaporizers
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Magento/PHP
                                 </div>
                             </div>
                         </div>
@@ -202,10 +202,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Client Work
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Wordpress
                                 </div>
                             </div>
                         </div>
@@ -217,10 +217,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    E-commerce website selling social media packages
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Wordpress
                                 </div>
                             </div>
                         </div>
