made resume link work and changed descriptions and other small fixes

--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
                     <h2 class="section-heading">About Me</h2>
                     <hr class="light">
                     <p class="text-faded">I was born and raised in Toronto.  I love music, sports, and programming.    </p>
-                    <a href="#" class="btn btn-default btn-xl">Get Started!</a>
+                    <a href="https://www.linkedin.com/pub/warren-phen/40/a8a/87a" class="btn btn-default btn-xl">LinkedIn</a>
+                    <a href="https://github.com/warrenphen" class="btn btn-default btn-xl">GitHub</a>
                 </div>
             </div>
         </div>
@@ -117,7 +118,7 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-server wow bounceIn text-primary" data-wow-delay=".1s"></i>
                         <h3>Back End</h3>
-                        <p class="text-muted">Ruby, Node.js, PHP, C#</p>
+                        <p class="text-muted">Ruby, Node.js</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
@@ -234,7 +235,7 @@
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Download my Resume in PDF!</h2>
-                <a href="/img/warrenphen-resume.pdf">Download Now!</a>
+                <a href="img/warrenphen-resume.pdf">Download Now!</a>
             </div>
         </div>
     </aside>
